# ComfyUI-WanAnimatePreprocessV2

./: .gitignore  LICENSE  NOTICE  NOTICE.md  __init__.py  _interrupt_check.py  gaze_blendshape.py  gaze_tflite.py  nodes.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: ci.yml  publish.yml  publish_action.yml  version-bump.yml
.release_notes/: v1.1.0.md  v1.1.1.md  v1.2.0.md  v1.2.1.md
example_workflows/: Pose.extraction.json  WanAnimate_native_example_01.json  master_workflow.json
js/: pose_and_face_detection.js
models/: onnx_models.py
onetoall/: infer_function.py  utils.py
